# pipelime-python

./: .coveragerc  .flake8  .gitignore  .readthedocs.yaml  LICENSE  Makefile  README.md  README.rst  make_docs.bat  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  requirements_docs.txt  setup.cfg  setup.py  tox.ini
.github/: Dockerfile  ISSUE_TEMPLATE.md
.github/workflows/: main.yml  release.yml
docs/: conf.py  index.md  pl_help.py  requirements.txt
docs/advanced/: data_streaming.md  debugging.md  entry_points.md  remotes.md  validation.md
docs/api/: commands.md  operations.md  stages.md
docs/basics/: entities.md  operations.md  underfolder.md
docs/choixe/: choixe.md  directives.md  intro.md  rand.md  syntax.md  xconfig.md
docs/cli/: cli.md  common_tasks.md  overview.md  piper.md
docs/get_started/: entities.md  example_data.md  installation.md  operations.md  pipelime.md  underfolder.md
docs/operations/: commands.md  intro.md  pipes.md  stages.md
docs/piper/: dags.md
docs/sequences/: items.md  sequences.md
docs/tutorials/: convert_to_underfolder.md  overview.md
examples/: cazzo.py
examples/cli/: .gitignore  README.ipynb  basic_usage.ipynb  cheatsheet.md  complex_dag.yaml  complex_params.yaml  custom_commands.ipynb  interfaces.md  my_command.py  split_cmd.yaml  split_params.yaml
examples/fake_repo/: .gitignore  seq_tutorial.py
examples/piper/: README.md  ae.yml  dag.yml  fakecli.py  fakewatcher.py  params.yml  pipercli.py  schema_detected.schema
examples/remotes/: .gitignore  basic_usage.ipynb
examples/sequences/: .gitignore  README.ipynb  custom_operators.ipynb  data_pipes.ipynb  data_streams.ipynb  grabber_example.py  item_serialization.md  my_pipe.py  new_dataset.ipynb  pipe_cfg.yaml
examples/stages/: .gitignore  custom_stages.ipynb  my_stage.py
examples/zmq_test/: publisher.py  pydantic_meta.py  subscriber.py
pipelime/: __init__.py
pipelime/choixe/: README.md  __init__.py  (+1 more)
tests/: __init__.py  conftest.py
(+309 files in other folders)
