[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pipelime-python"
authors = [
  { name="Daniele De Gregorio", email="daniele.degregorio@eyecan.ai" },
]
description = "Data workflows, cli and dataflow automation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
]
keywords = [
    "pipelime", "dataset", "dataflow", "workflow", "orchestration"
]
dependencies = [
    "typer>=0.6",
    "rich>=9.9.0",
    "pyyaml",
    "toml",
    "loguru",
    "numpy",
    "imageio>=2.17.0",
    "tifffile",
    "albumentations>=1.0.0",
    "astunparse",
    "python-box",
    "deepdiff",
    "filelock",
    "pydash",
    "pydantic>=1.10",
    "schema",
    "pyzmq",
    "dictquery",
    "minio",
    "pygraphviz",
    "requests",
]
dynamic = [ "version" ]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pylama",
    "black",
    "flake8",
]
build = [
    "hatch",
    "build",
]
docs = [
    "Sphinx==5.1.1",
    "sphinx-material==0.0.35",
    "myst-parser==0.18.0",
    "sphinxcontrib-mermaid==0.7.1",
]

[project.urls]
"Source" = "https://github.com/eyecan-ai/pipelime-python"
"Issues" = "https://github.com/eyecan-ai/pipelime-python/issues"

[project.scripts]
pipelime = "pipelime.cli.main:app"

[tool.hatch.version]
path = "pipelime/__init__.py"
